# EMULSION

./: .gitignore  README.md
Dilithium/: AMF  AMF.c  BS  BS.c  PK_AMF.txt  PK_BS.txt  PK_CKG.txt  UE  UE.c  sk_BS.txt
OTA/: README.md
OTA/srsRAN_4G/: CMakeLists.txt
OTA/srsRAN_4G/confs/: ue_rf.band3_mod.conf  ue_rf.conf
OTA/srsRAN_4G/lib/src/asn1/: CKG.cpp  CMakeLists.txt  Dilithium.cpp  Modulized_HIBFSS_Schnorr2.cpp  Modulized_HIBFSS_Schnorr2.cpp.bak  UE_ECDSA.cpp  UE_EC_SCHNORR.cpp  UE_HIBS.cpp  UE_T_BORG.cpp  asn1_utils.cc  crypto_utils.cpp  rrc_nr.cc
OTA/srsRAN_4G/srsue/src/: main.cc
OTA/srsRAN_Project/: CMakeLists.txt
OTA/srsRAN_Project/include/srsran/adt/: byte_buffer.h  byte_buffer_view.h
OTA/srsRAN_Project/include/srsran/asn1/: asn1_utils.h
OTA/srsRAN_Project/lib/asn1/rrc_nr/: AMF_ECDSA.cpp  AMF_EC_SCHNORR.cpp  AMF_HIBS.cpp  AMF_T_BORG.cpp  AMF_falcon.cpp  BS_ECDSA.cpp  BS_EC_SCHNORR.cpp  BS_HIBS.cpp  BS_falcon.cpp  BSs_T_BORG.cpp  CKG.cpp  CMakeLists.txt  Dilithium.cpp  Modulized_HIBFSS_Schnorr2.cpp  Modulized_HIBFSS_Schnorr2.cpp.bak  bcch_dl_sch_msg.cpp  crypto_utils.cpp  sys_info.cpp  sys_info.crypto.bak
emulsion/: AMF  AMF.c  BS  BS.c  PK_AMF_MAYO.txt  UE  UE.c  message.txt
falcon/: AMF  AMF.c  BS  BS.c  PK_AMF.txt  PK_BS.txt  PK_CKG.txt  UE  UE.c  sk_BS.txt
falcon_w_mayo/: AMF  AMF.c  BS  BS.c  PK_AMF_MAYO.txt  PK_BS_FALCON.txt  PK_CKG_MAYO.txt  UE  UE.c  sk_BS_FALCON.txt
misc/: dilit2_bench_full  dilit2_bench_full.c  hmac_bench  hmac_bench.c  mayo2_bench  mayo2_bench.c  mayo2_bench_full  mayo2_bench_full.c
(+55 files in other folders)
